# travellm

./: README.md  WRITEUP.md  app.py  prototype.ipynb  pyproject.toml
data/: fetch_data.py  synthetic_dataset.json
data/articles_1861_sample/: article_0000.json  article_0001.json  article_0007.json  article_0008.json  article_0010.json  article_0012.json  article_0014.json  article_0015.json  article_0016.json  article_0017.json  article_0020.json  article_0021.json  article_0024.json  article_0025.json  article_0028.json  article_0035.json  article_0038.json  article_0039.json  article_0043.json  article_0045.json  article_0047.json  article_0049.json
data/demo_articles_1861/: article_0002.json  article_0003.json  article_0004.json  article_0005.json  article_0006.json  article_0009.json  article_0011.json  article_0013.json  article_0018.json  article_0019.json  article_0022.json  article_0023.json  article_0026.json  article_0027.json  article_0029.json  article_0030.json  article_0031.json  article_0032.json  article_0033.json  article_0034.json  article_0036.json  article_0037.json  article_0040.json  article_0041.json  article_0042.json  article_0044.json  article_0046.json  article_0048.json
eval/: port_to_langsmith.py  ragas_eval.py  synthetic_data_generation.py
eval/ragas_results/: basic_retriever_ragas_results_20250805_103455.csv  ensemble_retriever_ragas_results_20250805_130807.csv  multi_query_ragas_results_20250805_112622.csv  (+2 more)
src/: chunk_docs.py  embed_articles.py  ensemble_retriever.py  multiquery_retriever.py  rag.py  retriever.py  search_loc.py
