[tool.poetry]
name = "time-travellm"
version = "0.1.0"
description = ""
authors = ["Brandi Seeley <brandi.n.seeley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = ">=2.16.0,<3.0.0"
requests = "^2.31.0"
langchain-community = "^0.3.27"
langchain = "^0.3.27"
jq = "^1.10.0"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.28"
langchain-qdrant = "^0.2.0"
langgraph = "^0.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
